@@ -1,5 +1,6 @@
 = 2.1.1.3 =
 * Single post tab is not working when tab id starts with number - FIXED
+* Unable to customize reviews template from child theme - FIXED
 
 = 2.1.1.2 =
 * Show alert if title, category fields are hidden & empty on submit add listing - CHANGED
